# zable

./: .gitignore  .rules  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
crates/zable/: Cargo.toml
crates/zable-components/: Cargo.toml
crates/zable-components/src/: icons.rs  zable-components.rs
crates/zable-components/src/field/: mod.rs
crates/zable-connection-ui/: Cargo.toml
crates/zable-connection-ui/src/: zable-connection-ui.rs
crates/zable-core/: Cargo.toml
crates/zable-core/src/: config.rs  tokio_bridge.rs  types.rs  zable-core.rs
crates/zable/src/: actions.rs  assets.rs  keybindings.rs  main.rs  menus.rs
crates/zable/src/views/: mod.rs
crates/zable_components/: Cargo.toml
crates/zable_components/src/: icons.rs  top_bar.rs  zable_components.rs
crates/zable_connection_ui/: Cargo.toml
crates/zable_connection_ui/src/: connection_view.rs  zable_connection_ui.rs
crates/zable_core/: Cargo.toml
crates/zable_core/src/: config.rs  path.rs  postgres.rs  types.rs  zable_core.rs
src/: connection.rs  main.rs
