[workspace]
resolver = "3"
members = ["crates/zable", "crates/zable-components"]

[workspace.package]
authors = ["driftcell <driftcell@icloud.com>"]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# For rendering and components
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# Parse connection strings
url = "2.5"

# For serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.102"
rust-embed = "8.11.0"
