[package]
name = "zable-connection-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "src/zable-connection-ui.rs"

[dependencies]
anyhow.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

zable-components = { path = "../zable-components" }
zable-core = { path = "../zable-core" }
