[package]
name = "zable-core"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = 'src/zable-core.rs'

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
gpui.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
percent-encoding.workspace = true
