[package]
name = "zable"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

zable-components = { path = "../zable-components" }
