[package]
name = "zable"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

zable-components = { path = "../zable-components" }
zable-connection-ui = { path = "../zable-connection-ui" }
zable-core = { path = "../zable-core" }
