[package]
name = "zable_connection_ui"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "src/zable_connection_ui.rs"

[dependencies]
anyhow.workspace = true
gpui-component-assets.workspace = true
gpui-component.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tokio.workspace = true

zable_components = { path = "../zable_components" }
zable_core = { path = "../zable_core" }
